# ATLabelMaster

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
assets/label/: label.txt
assets/models/: label.txt
labelmaster/src/: main.cpp  types.hpp
labelmaster/src/controller/: dataset.cpp  dataset.hpp  settings.cpp  settings.hpp
labelmaster/src/detector/: armor.hpp  smart_detector.cpp  smart_detector.hpp
labelmaster/src/detector/ai/: detector.hpp
labelmaster/src/detector/traditional/: detector.cpp  detector.hpp  number_classifier.cpp  number_classifier.hpp
labelmaster/src/logger/: core.hpp
labelmaster/src/service/: file.cpp  file.hpp
labelmaster/src/ui/: app_settings.cpp  app_settings.hpp  classes.hpp  dataset_manager.cpp  dataset_manager.hpp  image_canvas.cpp  image_canvas.hpp  label_storage.cpp  label_storage.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settings.dialog.cpp  settings_dialog.hpp  settings_dialog.ui  window.cpp  window.hpp
labelmaster/src/util/: bridge.hpp
